<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shop">

    <ImageView
        android:id="@+id/logokecil2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="63dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        />

    <ImageView
        android:id="@+id/dot"
        android:contentDescription="@string/over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dot"
        android:layout_marginEnd="41dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="63sp"/>

    <TextView
        android:id="@+id/slogan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_below="@id/logokecil2"
        android:layout_marginStart="30sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:textSize="32sp"
        android:fontFamily="@font/fredokaone"
        />
    <TextView
        android:fontFamily="@font/poppins"
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:layout_below="@id/slogan1"
        android:layout_marginStart="40sp"
        android:textColor="@color/green"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pouchproduct"
        android:layout_below="@id/slogan"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/pouchpr"
        android:id="@+id/pouchproduct"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lurikproduct"
        android:layout_below="@id/pouchproduct"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/lurikpr"
        android:id="@+id/lurik"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/checkout"
        android:layout_below="@id/lurik"
        android:id="@+id/checkout"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/cart"
        />
    <ImageView
        android:id="@+id/rect"
        android:contentDescription="@string/rect"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:src="@drawable/rectangle"
        android:layout_alignParentBottom="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/keranjang"
        android:alpha="0.5"
        android:contentDescription="@string/cart"
        android:src="@drawable/chart" />

    <ImageButton
        android:id="@+id/homee"
        android:contentDescription="@string/home"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/hom"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        />

    <ImageButton
        android:id="@+id/acc"
        android:contentDescription="@string/accountt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/account"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.5"/>
    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/accountt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/account"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="24dp"
        />


</RelativeLayout>