<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acount"
    android:background="@drawable/bggradient">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/gmail"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="-4dp"
        android:contentDescription="@string/rect"
        android:src="@drawable/accountrect" />

    <ImageView
        android:id="@+id/logokecil2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="63dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        />

    <ImageView
        android:id="@+id/dot"
        android:contentDescription="@string/over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/dot"
        android:layout_marginEnd="41dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="63sp"/>

    <TextView
        android:id="@+id/slogan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/fredoka"
        android:layout_below="@id/logokecil2"
        android:layout_marginStart="30sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:textSize="32sp"
        />
    <TextView
        android:id="@+id/slogan"
        android:fontFamily="@font/poppins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:layout_below="@id/slogan1"
        android:layout_marginStart="40sp"
        android:textColor="@color/green"/>
    <TextView
        android:id="@+id/hai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hai"
        android:fontFamily="@font/poppins"
        android:layout_below="@id/slogan"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/green"
        android:textSize="20sp"
        />
    <ImageView
        android:id="@+id/fotou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/userrrr"
        android:layout_below="@id/hai"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/User"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/nama"
        android:layout_below="@id/fotou"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/green"
        android:id="@+id/nama"
        />
    <TextView
        android:id="@+id/gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/gmail"
        android:layout_below="@id/nama"
        android:textColor="@color/green"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:text="@string/contact"
        android:layout_below="@id/gmail"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/contact"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/whatsapp"
        android:layout_below="@id/contact"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/nohp"
        android:id="@+id/whatsapp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nohp"
        android:layout_below="@id/contact"
        android:textColor="@color/white"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/instagram"
        android:layout_below="@id/whatsapp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/ig"
        android:id="@+id/insta"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ig"
        android:layout_below="@id/contact"
        android:textColor="@color/white"
        android:layout_marginStart="100dp"
        android:layout_marginTop="75dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/google"
        android:layout_below="@id/insta"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/gmail"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gmail"
        android:layout_below="@id/contact"
        android:textColor="@color/white"
        android:layout_marginStart="100dp"
        android:layout_marginTop="120dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        />
    <ImageView
        android:id="@+id/rect"
        android:contentDescription="@string/rect"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:src="@drawable/rectangle"
        android:layout_alignParentBottom="true"/>

    <ImageButton
        android:id="@+id/keranjang"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.5"
        android:contentDescription="@string/cart"
        android:src="@drawable/chart" />

    <ImageButton
        android:id="@+id/homee"
        android:contentDescription="@string/home"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/hom"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        />

    <ImageButton
        android:id="@+id/acc"
        android:contentDescription="@string/accountt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/account"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.5"/>

</RelativeLayout>